# ontoeval

./: .gitignore  Makefile  pyproject.toml
docs/: index.md
src/ontoeval/: cli.py  models.py  runner.py
src/ontoeval/judges/: llm_judge.py  metadiff_judge.py
src/ontoeval/renderers/: markdown.py
src/ontoeval/runners/: goose.py
